--- a/src/form_live_components/CustomSelector.css
+++ b/src/form_live_components/CustomSelector.css
@@ -19,6 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size: 14px;
 }
 .custom-select-display img{
   width: 20px;
