--- a/src/FormBuilderEditor.css
+++ b/src/FormBuilderEditor.css
@@ -225,10 +225,16 @@
   margin-left: 10px;
 }
 .color-preview-container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   position: absolute;
   z-index: 100;
-  right: -60px;
-  top: -210px;
+  right: -12px;
+  /* background-color: #fff;
+  padding: 6px;
+  border: 1px solid #ccc; */
+  border-radius: 4px;
 }
 .option-input {
   display: flex;
@@ -271,4 +277,36 @@
   gap: 4px;
   margin-bottom: 5px;
   font-size: 14px;
+}
+.color-format-inputs{
+  display: flex;
+  gap: 8px;
+  margin-top: 20px;
+}
+.rgb-input-container {
+  padding: 4px;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  position: relative;
+}
+
+.rgb-input-container label {
+  position: absolute;
+  top: -8px;
+  width: 18px;
+  left: 22%;
+  background-color: #f5f5f5;
+  padding: 0px 8px;
+  font-size: 11px;
+  display: block;
+}
+
+.rgb-input-container input {
+  border: none;
+  outline: none;
+  width: 70px;
+  font-size: 11px;
+  color: #333;
+  background-color: #f5f5f5;
+  padding: 2px;
 }
