--- a/src/FormBuilderEditor.css
+++ b/src/FormBuilderEditor.css
@@ -118,6 +118,86 @@
   border-radius: 4px;
   font-size: 14px;
 }
+.field-editor-column {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+}
+.field-editor-column-type,
+.field-editor-column-type-selected{
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  padding: 4px 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: fit-content;
+  cursor: pointer;
+}
+.field-editor-column-type-selected{
+  outline: 1px solid #6c6c6c;
+}
+.field-editor-add-column{
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  padding: 4px 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: fit-content;
+  cursor: pointer;
+}
+.field-editor-add-column img{
+  width: 24px;
+  height: 24px;
+  font-size: 16px;
+}
+.field-editor-add-column:hover{
+  opacity: 0.7;
+}
+
+.form-editor-custom-selector{
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  white-space: nowrap;
+  position: relative;
+}
+.form-editor-custom-selector img{
+  width: 20px;
+  height: 20px;
+}
+.form-editor-custom-selector-title{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.custom-dropdown-options {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  z-index: 1000;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.custom-dropdown-option {
+  display: flex;
+  align-items: center;
+  padding: 6px 10px;
+  cursor: pointer;
+}
+.custom-dropdown-option:hover {
+  background-color: #f0f0f0;
+}
 
 .field-editor_checkbox-group{
   flex-wrap: wrap;
