pdf converting update

--- a/src/FormBuilderEditor.css
+++ b/src/FormBuilderEditor.css
@@ -183,7 +183,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 100%;
+  width: fit-content;
   border: 1px solid #ccc;
   background-color: #fff;
   z-index: 1000;
