--- a/src/FormLiveStyles.css
+++ b/src/FormLiveStyles.css
@@ -159,7 +159,7 @@
   padding-left: 28px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 14px;
   user-select: none;
 }
 .vertical{
@@ -204,7 +204,7 @@
 
 .form-component-checkbox-container input:checked ~ .form-component-checkmark,
 .form-component-radio-container input:checked~ .form-component-radiomark  {
-  background-color: #2196F3;
+  background-color: rgb(6, 158, 180);
 }
 
 .form-component-checkmark:after {
