--- a/src/documents_page_components/DocumentPage.css
+++ b/src/documents_page_components/DocumentPage.css
@@ -6,21 +6,31 @@
 .breadcrumb{
   display: flex;
   justify-content: space-between;
-  padding: 8px 12px;
+  padding: 10px 12px;
 }
 .breadcrumb span{
   color: #91b9d8;
 }
 
+.document-management-options {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.document-management-option{
+  display: flex;
+  cursor: pointer;
+}
 .document-management-content{
   display: grid;
   grid-template-columns: 1fr 5fr;
 }
 .sidebar {
   width: fit-content;
+  max-width: 320px;
   background-color: #e2f0ff;
   color: rgb(0, 0, 0);
-  padding: 10px;
+  padding: 10px 8px;
 }
 
 .sidebar h2 {
@@ -33,14 +43,15 @@
 }
 
 .sidebar li {
+  font-size: 14px;
   padding: 5px;
-  cursor: pointer;
 }
 .folder-title{
   display: flex;
   gap: 8px;
   align-items: flex-end;
   margin-bottom: 8px;
+  cursor: pointer;
 }
 .folder-icon{
   width: 24px;
@@ -48,10 +59,23 @@
 }
 .file-title{
   display: flex;
-  gap: 8px;
-  align-items: flex-end;
+  gap: 2px;
+  align-items: center;
   margin-bottom: 8px;
   white-space: nowrap;
+  cursor: pointer;
+}
+.file-title:hover{
+  opacity: 0.7;
+}
+.file-title-text{
+  padding: 0px 6px;
+}
+.file-title-text-chosen{
+  padding: 0px 6px;
+  background-color: #056cf3;
+  color: #ffffff;
+  border-radius: 4px;
 }
 
 .sidebar li ul {
@@ -89,6 +113,9 @@
   border-bottom: 4px solid #dededf;
   width: 100%;
   font-size: 15px;
+}
+.document-preview-content{
+  padding: 12px 0px;
 }
 .document-preview-info{
   padding: 8px 12px;
