--- a/src/index.css
+++ b/src/index.css
@@ -554,6 +554,11 @@ body {
   gap: 12px;
   padding: 10px;
 }
+.column-option-content {
+  display: grid;
+  grid-template-columns: 1fr ;
+  gap: 6px;
+}
 .section-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -867,6 +872,8 @@ body {
 .form-checkbox-option-radio{
   width: 15px;
   height: 15px;
+  min-width: 15px;
+  min-height: 15px;
   box-sizing: border-box;
   border: 1px solid rgb(211, 221, 225);
   border-radius: 12px;
@@ -874,6 +881,8 @@ body {
 .form-checkbox-option-radio-checked{
   width: 15px;
   height: 15px;
+  min-width: 15px;
+  min-height: 15px;
   box-sizing: border-box;
   border-radius: 12px;
   border: 1px solid rgb(6, 158, 180);
@@ -882,6 +891,8 @@ body {
 .form-checkbox-option-checker{
   width: 15px;
   height: 15px;
+  min-width: 15px;
+  min-height: 15px;
   box-sizing: border-box;
   border: 1px solid rgb(211, 221, 225);
   border-radius: 4px;
@@ -889,6 +900,8 @@ body {
 .form-checkbox-option-checker-checked{
   width: 15px;
   height: 15px;
+  min-width: 15px;
+  min-height: 15px;
   box-sizing: border-box;
   border-radius: 4px;
   border: 1px solid rgb(6, 158, 180);
@@ -1162,10 +1175,60 @@ body {
   height: 32px;
 }
 
+[help-title] {
+  position: relative;
+}
+
+[help-title]:after {
+  content: attr(help-title); /* Display the content of the custom attribute */
+  background-color: #332F2E;
+  width: max-content;
+  max-width: 300px;
+  color: #fff;
+  font-size: 12px;
+  position: absolute;
+  padding: 1px 5px 2px 5px;
+  right: 2px;
+  top: 26px;
+  white-space: nowrap;
+  box-shadow: 1px 1px 3px #222222;
+  opacity: 0;
+  border-radius: .3rem;
+  z-index: 12000;
+  visibility: hidden;
+  transition: opacity 0.2s ease, visibility 0.2s ease;
+}
+
+[help-title]:hover:after {
+  opacity: 0.8;
+  visibility: visible;
+}
+
+#remove_icon:hover,
+#duplicate_icon:hover{
+  content: attr(help-title);
+}
+.actions-container{
+  display: flex; 
+  gap: 10px;
+}
+.action-button{
+  border: none;
+  background-color: initial;
+  cursor: pointer;
+}
+#cancel_editing:hover,
+#save_editing:hover{
+  content: attr(help-title);
+}
 
 .size20-icon{
   width: 20px;
   height: 20px;
+}
+.size22-icon{
+  width: 22px;
+  height: 22px;
 }
 .size24-icon{
   width: 24px;
@@ -1178,6 +1241,9 @@ body {
 .size28-icon{
   width: 28px;
   height: 28px;
+}
+.pointer{
+  cursor: pointer;
 }
 .table-action-button{
   border: 1px solid #c3e6cb;
