--- a/src/documents_page_components/DocumentPage.css
+++ b/src/documents_page_components/DocumentPage.css
@@ -23,12 +23,10 @@
 }
 .document-management-content{
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 290px 5fr;
 }
 .sidebar {
-  width: fit-content;
-  min-width: 220px;
-  max-width: 320px;
+  width: 290px;
   background-color: #e2f0ff;
   color: rgb(0, 0, 0);
   padding: 10px 8px;
