--- a/src/FormBuilderEditor.css
+++ b/src/FormBuilderEditor.css
@@ -288,12 +288,12 @@
 }
 
 .color-preview {
-  width: 28px;
-  height: 28px;
+  width: 22px;
+  height: 22px;
   border: 1px solid #ccc;
   cursor: pointer;
   display: inline-block;
-  margin: 4px 8px 0px;
+  margin: 6px 8px 0px;
 }
 .color-preview-container{
   display: flex;
@@ -324,6 +324,7 @@
   border-radius: 2px;
   height: 14px;
   width: 14px;
+  min-width: 14px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -354,8 +355,22 @@
 .field-editor-add-button,
 .field-editor-remove-button {
   border-radius: 6px;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 14px;
+  cursor: pointer;
+}
+.field-editor-add-first-option-button{
+  border-radius: 6px;
   height: 24px;
-  width: 24px;
+  padding: 0px 6px;
+  width: fit-content;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -368,7 +383,7 @@
 
 .field-editor-remove-button {
   background-color: #dc3545;
-  margin-left: 5px;
+  margin-left: 6px;
 }
 .field-editor-checkbox-options {
   margin-top: 10px;
