--- a/src/form_results_components/FormResultsStyles.css
+++ b/src/form_results_components/FormResultsStyles.css
@@ -13,6 +13,15 @@
 .form-result-content {
   padding: calc(12px);
   min-width: 640px;
+  position: relative;
+}
+.form-result-timestamp{
+  position: absolute;
+  top: 8px;
+  height: 14px;
+  right: 20px;
+  font-size: 12px;
+  z-index: 10;
 }
 
 .form-result-title-component{
@@ -27,26 +36,17 @@
   font-weight: 600;
   min-height: 6px;
 }
-.form-live-component-value{
-  color: rgb(89, 93, 100);
-  background-color: rgb(255, 255, 255);
-  border-style: solid;
-  border-width: 1px;
-  border-color: rgb(69, 85, 96);
-  border-radius: 0px;
-  box-sizing: border-box;
-  font-family: inherit;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  height: calc(42px);
-  line-height: 14px;
-  max-width: 100%;
-  padding: calc(7px);
-  transition-property: color, background-color, border, border-color, box-shadow;
+.form-result-component-container{
+  direction: ltr;
+  position: relative;
+  transition-property: padding, box-shadow, background-color, margin-left, margin-right;
   transition-duration: 0s;
   transition-timing-function: ease-in-out;
-  width: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  grid-column: span 1;
+  margin-bottom: calc(14px);
 }
 .form-results-component-title{
   align-items: center;
@@ -54,7 +54,6 @@
   display: flex;
   min-height: 5px;
   margin-top: -5px;
-  margin-bottom: 5px;
   color: rgb(69, 85, 96);
   font-weight: 600;
   font-size: 16px;
@@ -68,9 +67,15 @@
   white-space: nowrap;
   padding: 8px 4px;
 }
+.form-result-component-value{
+  font-size: 14px;
+}
 .form-results-section-result{
   font-size: 13px;
   padding: 8px 4px;
+}
+.form-live-component-selected-option{
+  padding: 4px 0px;
 }
 .form-results-table{
   width: 100%;
@@ -80,7 +85,7 @@
 }
 .form-results-td{
   border: 1px solid rgb(211, 221, 225);
-  font-size: 13px;
+  font-size: 14px;
   padding: 8px 6px;
   max-width: 300px
 }
@@ -92,15 +97,15 @@
 }
 .form-results-td-bordless{
   border: none;
-  font-size: 13px;
-  padding: 8px 6px;
+  font-size: 14px;
+  padding: 4px 6px;
   max-width: 300px
 }
 .field-result-option-corrective-action{
   display: flex;
   gap: 8px;
   align-items: center;
-  font-size: 14px;
+  font-size: 13px;
   color: #eaa69d;
   margin-top: -8px;
 }
