--- a/src/index.css
+++ b/src/index.css
@@ -682,7 +682,6 @@ body {
   color: rgb(69, 85, 96);
   font-size: 16px;
   font-weight: 600;
-  padding: 0px 6px;
   min-height: 6px;
 }
 .form-component-input-div{
@@ -1221,26 +1220,39 @@ body {
 #save_editing:hover{
   content: attr(help-title);
 }
+#edit_results:hover,
+#cancel_editing:hover,
+#submit_changes:hover{
+  content: attr(help-title);
+}
 
+.icon-flex-container{
+  display: flex;
+  transition: 300ms ease all;
+}
+.size18-icon{
+  width: 18px !important;
+  height: 18px !important;
+}
 .size20-icon{
-  width: 20px;
-  height: 20px;
+  width: 20px !important;
+  height: 20px !important;
 }
 .size22-icon{
-  width: 22px;
-  height: 22px;
+  width: 22px !important;
+  height: 22px !important;
 }
 .size24-icon{
-  width: 24px;
-  height: 24px;
+  width: 24px !important;
+  height: 24px !important;
 }
 .size26-icon{
-  width: 26px;
-  height: 26px;
+  width: 26px !important;
+  height: 26px !important;
 }
 .size28-icon{
-  width: 28px;
-  height: 28px;
+  width: 28px !important;
+  height: 28px !important;
 }
 .pointer{
   cursor: pointer;
