after step bugs fix

--- a/src/form_results_components/FormResultsStyles.css
+++ b/src/form_results_components/FormResultsStyles.css
@@ -101,11 +101,18 @@
   padding: 4px 6px;
   max-width: 300px
 }
-.field-result-option-corrective-action{
+.field-result-option-corrective-action-box{
   display: flex;
   gap: 8px;
   align-items: center;
   font-size: 13px;
   color: #eaa69d;
   margin-top: -8px;
+}
+.field-result-option-corrective-action{
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  font-size: 13px;
+  color: #eaa69d;
 }
