--- a/src/FormLiveStyles.css
+++ b/src/FormLiveStyles.css
@@ -39,6 +39,16 @@
   grid-column: span 1;
   margin-bottom: calc(12px);
 }
+.form-live-component-container-label{
+  display: flex;
+  flex-direction: column;
+  padding: 0px 4px;
+  font-size: 14px;
+  cursor: pointer;
+}
+.form-live-component-container-label:hover{
+  opacity: 0.8;
+}
 .form-live-date-time-container{
   display: grid;
   grid-template-columns: 1fr 1fr;
