--- a/src/documents_page_components/DocumentPage.css
+++ b/src/documents_page_components/DocumentPage.css
@@ -21,6 +21,9 @@
   display: flex;
   cursor: pointer;
 }
+.document-management-option:hover{
+  opacity: 0.7;
+}
 .document-management-content{
   display: grid;
   grid-template-columns: 290px 5fr;
