--- a/src/form_live_components/CustomSelector.css
+++ b/src/form_live_components/CustomSelector.css
@@ -17,7 +17,7 @@
   border-radius: 4px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   font-size: 14px;
   white-space: nowrap;
   height: 44px;
@@ -38,7 +38,7 @@
   z-index: 1000;
   list-style: none;
   padding: 0;
-  max-height: 200px;
+  max-height: 250px;
   overflow-y: auto;
 }
 
